--- a/package.json
+++ b/package.json
@@ -1,27 +1,48 @@
 {
-  "name": "pay_with_braintree",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.0.3"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.3"
-  }
+    "name": "pay_with_braintree",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev | pino-pretty",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@clerk/nextjs": "^4.27.1",
+        "@hookform/resolvers": "^3.3.2",
+        "@radix-ui/react-dialog": "^1.0.5",
+        "@radix-ui/react-label": "^2.0.2",
+        "@radix-ui/react-select": "^2.0.0",
+        "@radix-ui/react-slot": "^1.0.2",
+        "@radix-ui/react-toast": "^1.1.5",
+        "axios": "^1.6.2",
+        "braintree": "^3.19.0",
+        "braintree-web": "^3.97.3",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.0.0",
+        "lucide-react": "^0.292.0",
+        "next": "14.0.3",
+        "pino": "^8.16.2",
+        "react": "^18",
+        "react-dom": "^18",
+        "react-hook-form": "^7.48.2",
+        "tailwind-merge": "^2.0.0",
+        "tailwindcss-animate": "^1.0.7",
+        "zod": "^3.22.4",
+        "zustand": "^4.4.6"
+    },
+    "devDependencies": {
+        "@types/braintree": "^3.3.11",
+        "@types/braintree-web": "^3.96.9",
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "autoprefixer": "^10.0.1",
+        "eslint": "^8",
+        "eslint-config-next": "14.0.3",
+        "postcss": "^8",
+        "tailwindcss": "^3.3.0",
+        "typescript": "^5"
+    }
 }
