--- a/package.json
+++ b/package.json
@@ -3,19 +3,26 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "dev": "next dev | pino-pretty",
+        "dev": "next dev",
+        "dev-pretty": "next dev | pino-pretty",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint"
+        "lint": "next lint",
+        "db:generate": "npx prisma generate",
+        "db:push": "npx prisma db push",
+        "db:reset": "npx prisma migrate reset",
+        "db:client": "npx prisma studio"
     },
     "dependencies": {
         "@clerk/nextjs": "^4.27.1",
         "@hookform/resolvers": "^3.3.2",
+        "@prisma/client": "^5.6.0",
         "@radix-ui/react-dialog": "^1.0.5",
         "@radix-ui/react-label": "^2.0.2",
         "@radix-ui/react-select": "^2.0.0",
         "@radix-ui/react-slot": "^1.0.2",
         "@radix-ui/react-toast": "^1.1.5",
+        "@tanstack/react-table": "^8.10.7",
         "axios": "^1.6.2",
         "braintree": "^3.19.0",
         "braintree-web": "^3.97.3",
@@ -27,6 +34,7 @@
         "react": "^18",
         "react-dom": "^18",
         "react-hook-form": "^7.48.2",
+        "sonner": "^1.2.3",
         "tailwind-merge": "^2.0.0",
         "tailwindcss-animate": "^1.0.7",
         "zod": "^3.22.4",
@@ -42,6 +50,7 @@
         "eslint": "^8",
         "eslint-config-next": "14.0.3",
         "postcss": "^8",
+        "prisma": "^5.6.0",
         "tailwindcss": "^3.3.0",
         "typescript": "^5"
     }
