--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "db:generate": "npx prisma generate",
         "db:push": "npx prisma db push",
         "db:reset": "npx prisma migrate reset",
-        "db:client": "npx prisma studio"
+        "db:client": "npx prisma studio",
+        "test": "jest"
     },
     "dependencies": {
         "@clerk/nextjs": "^4.27.1",
@@ -43,14 +44,20 @@
         "zustand": "^4.4.6"
     },
     "devDependencies": {
+        "@testing-library/jest-dom": "^6.4.2",
+        "@testing-library/react": "^15.0.1",
         "@types/braintree": "^3.3.11",
         "@types/braintree-web": "^3.96.9",
+        "@types/jest": "^29.5.12",
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
         "autoprefixer": "^10.0.1",
         "eslint": "^8",
         "eslint-config-next": "14.0.3",
+        "jest": "^29.7.0",
+        "jest-environment-jsdom": "^29.7.0",
+        "next-router-mock": "^0.9.13",
         "postcss": "^8",
         "prisma": "^5.6.0",
         "tailwindcss": "^3.3.0",
