--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "react": "^18",
         "react-dom": "^18",
         "react-hook-form": "^7.48.2",
+        "react-icons": "^5.2.0",
         "sonner": "^1.2.3",
         "swr": "^2.2.4",
         "tailwind-merge": "^2.0.0",
